Finish layout and routes

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Contact') %>
-<h1>Contacts</h1>
+<h1>Contact</h1>
 <p>
-email: elenkinaleksey@gmail.com <br>
-github: github.com/ElenkinAleksey/sample_app
+  Contact Ruby on Rails Tutorial about the sample app at the
+  <a href="http://railstutorial.org/contact">contact page</a>.
 </p>
